// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header render snapshot 1`] = `
<div>
  <header>
    <a
      href="https://war.ukraine.ua/support-ukraine/"
      rel="noreferrer"
      target="_blank"
    >
      <div
        class="praporBlue"
      />
      <div
        class="praporYellow"
      />
    </a>
    <div
      class="titleLine"
    >
      <button
        aria-haspopup="true"
        aria-label="menu"
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-edgeStart MuiIconButton-sizeLarge css-18jzufx-MuiButtonBase-root-MuiIconButton-root"
        data-testid="header_menuButton"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-testid="MenuIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
          />
        </svg>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <h1>
        Technical Assessment
      </h1>
    </div>
  </header>
</div>
`;

exports[`render Header 1`] = `
<div
  aria-hidden="true"
>
  <header>
    <a
      href="https://war.ukraine.ua/support-ukraine/"
      rel="noreferrer"
      target="_blank"
    >
      <div
        class="praporBlue"
      />
      <div
        class="praporYellow"
      />
    </a>
    <div
      class="titleLine"
    >
      <button
        aria-haspopup="true"
        aria-label="menu"
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-edgeStart MuiIconButton-sizeLarge css-18jzufx-MuiButtonBase-root-MuiIconButton-root"
        data-testid="header_menuButton"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-testid="MenuIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
          />
        </svg>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <h1>
        Technical Assessment
      </h1>
    </div>
  </header>
</div>
`;
